# gene

./: .gitignore  PROJECT.md  README.md  main.py  pyproject.toml
eval_results/: summary.json  timings_summary.json
eval_results/arithmetic/: haiku.json  haiku.timings.jsonl  opus.json  opus.timings.jsonl  sonnet.json  sonnet.timings.jsonl  summary.json  timings_summary.json
eval_results/basic/: haiku.json  haiku.timings.jsonl  opus.json  opus.timings.jsonl  sonnet.json  sonnet.timings.jsonl  summary.json  timings_summary.json
eval_results/gene/agent/eval_cases/: summary.json  timings_summary.json
eval_results/gene/agent/eval_cases/arithmetic/: haiku.json  haiku_0.json  opus.json  sonnet.json  sonnet.timings.jsonl  (+2 more)
gene/: chat_loop.py  config.py  conversation.py  eval_case.py  eval_configs.py  evals.py  llm.py  llm_utils.py  log_view.py  run_evals.py  tool.py  turn.py  turn_runner.py
gene/agent/: ansi.py  chat_loop.py  config.py  conversation.py  eval_case.py  eval_configs.py  eval_predicates.py  eval_predicates_turn.py  evals.py  execute_step.py  llm.py  log_view.py  prompts.py  run_evals.py  tool.py  turn.py  turn_runner.py
gene/agent/eval_cases/: arithmetic.py  basic.py
gene/agent/prompts/: general_purpose.md
gene/agent/tools/: calculator.py
gene/eval_cases/: arithmetic.py  basic.py
gene/genealogy/: __init__.py  agent.py  chat.py  config.py  gedcom.py  load.py  models.py  store.py
gene/genealogy/eval_cases/: david_ancestors.py
gene/genealogy/prompts/: general_conversation.md
gene/genealogy/tools/: query.py
gene/tools/: calculator.py
tests/: test_conversation.py  test_eval_predicates.py  test_evals.py  test_gedcom.py  test_genealogy_agent.py  test_llm_utils.py  test_log_view.py  test_query.py  test_store.py  test_turn.py
(+7 files in other folders)
