[project]
name = "gene"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "diskcache>=5.6.3",
    "ged4py>=0.5.2",
    "ipython>=9.15.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes  (basics)
    "I",             # isort                    (import ordering)
    "UP",            # pyupgrade                (modern syntax)
    "B",             # flake8-bugbear           (real bugs)
    "SIM",           # flake8-simplify          (obvious simplifications)
]
